fix ol,uls in flashcards and improve spacing of h2 in blog posts

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -2044,5 +2044,8 @@ a.mobile_nav_icon {
 
 
 
-
+.blog_post_inner h2 {
+  margin-bottom: 8px;
+  margin-top: 5px;
+}
 
